--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body {
     padding: 0;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+}
 
 a {
     text-decoration: none;
