--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ header {
     align-items: center;
 }
 
+.container {
+    background-color: rgba(255, 255, 255, 0.5);
+    padding: 20px;
+    text-align: center;
+}
+
+
+  
 
 a {
     text-decoration: none;
