--- a/style.css
+++ b/style.css
@@ -41,7 +41,13 @@ header {
     text-align: center;
 }
 
-
+.signIn {
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
   
 
 a {
