--- a/style.css
+++ b/style.css
@@ -48,7 +48,15 @@ header {
     border: none;
     cursor: pointer;
 }
-  
+
+.box-images {
+    background-image: url('background2.jpg');
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+}
 
 a {
     text-decoration: none;
