--- a/style.css
+++ b/style.css
@@ -118,3 +118,11 @@ a {
     padding: 10px;
     width: 300px;
 }
+
+.container button[type="submit"] {
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
