add: footer background and seperation

--- a/style.css
+++ b/style.css
@@ -126,3 +126,12 @@ a {
     border: none;
     cursor: pointer;
 }
+
+footer {
+    background-color: #333;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+}
